<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />


    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/title_contact" />


    <item
        android:id="@+id/navigation_donate"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/title_donate"
        />

    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/ic_loyalty_black_24dp"
        android:title="@string/title_help" />



    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_calendar_24dp"
        android:title="@string/title_events"
        />

</menu>
