<?xml version="1.0" encoding="utf-8"?>
<fragment
    android:id="@+id/fragment_home"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_title"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <VideoView
                android:id="@+id/videoView"
                android:layout_width="match_parent"
                android:layout_height="244dp"

                />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_text1"
                android:textAlignment="center"

                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_text2"
                android:textAlignment="center"

                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                />

            <TextView
                android:id="@+id/txt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_text3"
                android:textAlignment="center"

                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                />

            <TextView
                android:id="@+id/txt4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_text4"
                android:textAlignment="center"

                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                />
        </LinearLayout>
    </ScrollView>
</fragment>